--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 try {
 var pageTracker = _gat._getTracker("UA-18744071-1");
 pageTracker._trackPageview();
-} catch(err) {}</script>"
+} catch(err) {}</script>
 
 </body>
 </html>
