Add news section & update colours

--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
     h1            { font-size: 3.8em; color: #888; margin-bottom: 3px; }
     h1 .small     { font-size: 0.4em; }
     h1 a          { color: #bbb; text-decoration: none }
-
-    h2            { font-size: 1.5em; color: #888; }
-    h3            { text-align: center; color: #888; }
-
+    h2            { font-size: 1.5em; color: #ff006c; }
     a             { color: #555; }
     a:hover       { color: #7DC1fF; }
     pre           { background: #000; color: #fff; padding: 15px;}
@@ -30,7 +27,6 @@
     .description  { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic; }
     .download     { float: right; }
     .footer       { text-align:center; padding-top:30px; font-style: italic; }
-
     .rl a         { color: #000; text-decoration: underline; }
     .rl a:hover   { color: #7DC1fF; }
 
@@ -70,6 +66,14 @@
     license.  It is primarily targeted at power users, developers and any people with too much time
     on their hands who want to have fine-grained control over their web browsers behaviour and
     interface.</p>
+
+    <h2>News</h2>
+
+    <p><ul class="rl">
+      <li><a href="news/luakit-2012.03.25.html">
+          Luakit 2012.03.25
+      </a></li>
+    </ul></p>
 
     <h2>Resources</h2>
     <!-- about luakit -->
