Removing last reference to "micro-browser", reduces confusion

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       Fast, small, webkit based browser framework extensible by Lua.
     </div>
 
-    <p id="ld">Luakit is a highly configurable, micro-browser framework based on the <a
+    <p id="ld">Luakit is a highly configurable, browser framework based on the <a
       href="http://webkit.org/">WebKit</a> web content engine and the <a
       href="http://gtk.org/">GTK+</a> toolkit. It is very fast, extensible by <a
       href="http://lua.org/">Lua</a> and licensed under the <a
