Add 2012.09.13 news items

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
     <h2>News</h2>
 
     <p><ul class="rl">
+      <li><a href="news/luakit-2012.09.13.html">
+          Luakit 2012.09.13
+      </a></li>
       <li><a href="news/luakit-2012.03.25.html">
           Luakit 2012.03.25
       </a></li>
