--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <p><ul class="rl">
       <li><a href="news/luakit-2012.09.13.html">
-          Luakit 2012.09.13
+          Luakit 2012.09.13-r1
       </a></li>
       <li><a href="news/luakit-2012.03.25.html">
           Luakit 2012.03.25
