Move to luakit.github.io

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
 	<nav>
 		<a href="#">Home</a>
-		<a href="/luakit/news/">Releases</a>
+		<a href="/news/">Releases</a>
 		<a href="#sec-download">Download</a>
-		<a href="/luakit/docs/">Documentation</a>
+		<a href="/docs/">Documentation</a>
 		<a href="#sec-contributing">Contributing</a>
 		<a href="https://github.com/luakit/luakit" target="_blank">GitHub</a>
 	</nav>
