--- a/build-utils/docs_template.html
+++ b/build-utils/docs_template.html
@@ -6,7 +6,7 @@
 	<title>Luakit API Documentation</title>
 	<link rel="icon" type="image/png" href="favicon.png" />
 	<style type="text/css">{style}</style>
-	<link rel=stylesheet href=/luakit/style.css />
+	<link rel=stylesheet href=/style.css />
 	<link rel="stylesheet" href="https://code.cdn.mozilla.net/fonts/fira.css">
 	<style type="text/css">
 		#wrap { padding: 2em 0; }
@@ -18,11 +18,11 @@
 </head>
 <body>
 	<nav>
-		<a href="/luakit/">Home</a>
-		<a href="/luakit/news/">Releases</a>
-		<a href="/luakit/#sec-download">Download</a>
-		<a href="/luakit/docs/">Documentation</a>
-		<a href="/luakit/#sec-contributing">Contributing</a>
+		<a href="/">Home</a>
+		<a href="/news/">Releases</a>
+		<a href="/#sec-download">Download</a>
+		<a href="/docs/">Documentation</a>
+		<a href="/#sec-contributing">Contributing</a>
 		<a href="https://github.com/luakit/luakit" target="_blank">GitHub</a>
 	</nav>
 	<div class="container">
