Fix OS icons using old URLs

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
 
 			<ul id=osicons>
 				<li>
-					<img src="/luakit/images/windows.svg" alt="" />
+					<img src="/images/windows.svg" alt="" />
 					<span>Windows 10 with <abbr title="Windows Subsystem for Linux">WSL</abbr></span>
 				<li>
-					<img src="/luakit/images/linux.svg" alt="" />
+					<img src="/images/linux.svg" alt="" />
 					<span>Linux</span>
 				<li>
-					<img src="/luakit/images/bsd.svg" alt="" />
+					<img src="/images/bsd.svg" alt="" />
 					<span>BSD</span>
 			</ul>
 		</div>
