Add warning about outdated GCC on OpenBSD

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 		<div class="container">
 			<h3>Installing on BSD</h3>
 			<p>FreeBSD and OpenBSD users can install the <code>luakit</code> package.</p>
+			<p>When installing from source, OpenBSD users should build with clang instead of GCC, as the GCC version shipped with OpenBSD is outdated and its use will result in compilation errors.</p>
 		</div>
 	</section>
 
