Fix help page markup

--- a/help/index.html
+++ b/help/index.html
@@ -52,20 +52,18 @@
 			<p>Please include the following information in your bug report:</p>
 
 			<ul>
-				<li>Current luakit version; this can be found by running <code>luakit --version</code> in the terminal.</li>
-			</ul>
-
-			<p>   Example: <code>luakit 2012.09.13-r1-1722-gca2571be</code></p>
-
-			<ul>
-				<li>Current operating system, version, and CPU architecture, if applicable. E.g</li>
-			</ul>
-
-			<p>   Examples: "Ubuntu 16.04 on i386", "Arch 64-bit"</p>
-
-			<ul>
-				<li>If luakit was working recently but broke in an update, please also include
-				the version number for the most recent known-working build.</li>
+				<li>
+					<p>Current luakit version; this can be found by running <code>luakit --version</code> in the terminal.</p>
+					<p>Example: <code>luakit 2012.09.13-r1-1722-gca2571be</code></p>
+				</li>
+				<li>
+					<p>Current operating system, version, and CPU architecture, if applicable.</p>
+					<p>Examples: "Ubuntu 16.04 on i386", "Arch 64-bit"</p>
+				</li>
+				<li>
+					<p>If luakit was working recently but broke in an update, please also include
+					the version number for the most recent known-working build.</p>
+				</li>
 			</ul>
 
 			<h3>How to request a new feature / make a suggestion</h3>
