Add new icon for the website

--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
 	<header>
 		<div class="container">
 			<h1>
-				<a href="https://github.com/luakit/luakit" target="_blank">luakit</a>
+				<a href="https://github.com/luakit/luakit" target="_blank">
+					<img src=icon.png /><span>luakit</span>
+				</a>
 			</h1>
 			<div id=slogan>
-				A fast, extensible, and<br> customizable web browser.
+				A fast, extensible, and<br> customizable web browser
 			</div>
 		</div>
 	</header>
