--- a/contributing/index.html
+++ b/contributing/index.html
@@ -25,7 +25,7 @@
 
 <h3>Submitting trivial fixes</h3>
 
-<p>If you notice a small issue that's easy to fix, you're free to submut
+<p>If you notice a small issue that's easy to fix, you're free to submit
 a pull request or patch directly, without asking or opening an issue
 first. This includes spelling / grammar mistakes, whitespace /
 formatting fixes, and any tweaks needed to get luakit to run.</p>
