--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
 		<div class="container">
 			<h3>Installing on Linux</h3>
 			<ul>
-				<li><p>Arch Linux users can install the <a href="https://aur.archlinux.org/packages/luakit-git/" target="_blank">luakit-git</a> package from the AUR.
+				<li><p>Arch Linux users can install the <a href="https://archlinux.org/packages/community/x86_64/luakit/">luakit</a> community package or the
+					<a href="https://aur.archlinux.org/packages/luakit-git/" target="_blank">luakit-git</a> package from the AUR.
 				<li><p>Other users will need to download and build from source. A Debian package is in the works. Luakit contains only around 9000 lines of code, so this process is usually very fast.
 			</ul>
 		</div>
