Add Solaris and HURD as supported.

--- a/index.html
+++ b/index.html
@@ -75,14 +75,20 @@
 
 			<ul id=osicons>
 				<li>
-					<img src="/images/windows.svg" alt="" />
-					<span>Windows 10 with <abbr title="Windows Subsystem for Linux">WSL</abbr></span>
+					<img src="images/windows.svg" alt="" />
+					<span>Windows 10<br/>(with <abbr title="Windows Subsystem for Linux">WSL</abbr>)</span>
 				<li>
-					<img src="/images/linux.svg" alt="" />
+					<img src="images/linux.svg" alt="" />
 					<span>Linux</span>
 				<li>
-					<img src="/images/bsd.svg" alt="" />
+					<img src="images/bsd.svg" alt="" />
 					<span>BSD</span>
+				<li>
+					<img src="images/solaris.svg" alt="" />
+					<span>Solaris</span>
+				<li>
+					<img src="images/hurd.svg" alt="" />
+					<span>HURD</span>
 			</ul>
 		</div>
 	</section>
